--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,8 @@
 .navbarTitulos{
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
+
   font-weight: 500;
   font-size: 20px;
   color: #A67D03;
@@ -53,6 +54,19 @@
   color: #A67D03;
   text-decoration: none;
   
+}
+
+.navbarTitulos button{
+  appearance: none;
+  border-radius: 24px;
+  border-style: none;
+  background-color: rgb(252, 246, 232);
+
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;  /*100-900*/
+  font-style: normal; /*italic*/
+  font-size: 20px;
+  margin: 0;
 }
 
 .textoslogan{
