--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,11 @@
   width: 25%;
 }
 
+.logotipo a{
+  width: 60%;
+}
+
+
 .navbarTitulos{
   display: flex;
   flex-direction: row;
@@ -42,18 +47,6 @@
   font-size: 20px;
   color: #A67D03;
   width: 50%;
-}
-
-.navbarTitulos :hover{
-  cursor: pointer;
-  transform: translateY(-2px);
-  color: #5b3013
-}
-
-.navbarTitulos a{
-  color: #A67D03;
-  text-decoration: none;
-  
 }
 
 .navbarTitulos button{
@@ -68,6 +61,44 @@
   font-size: 20px;
   margin: 0;
 }
+
+.navbarTitulos :hover{
+  cursor: pointer;
+  transform: translateY(-2px);
+  color: #5b3013
+}
+
+.navbarTitulos a{
+  color: black;
+  text-decoration: none;
+  
+}
+
+.navbarTitulos button:hover > div{
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+}
+
+.desplegable{
+  display: none;
+  cursor: none;
+  transform: none;
+  padding-top: 2px;
+}
+
+.desplegable button{
+  border-radius: 0px;
+  cursor: none;
+  transform: none;
+}
+
+
+.categ{
+  display: inline;
+}
+
+
 
 .textoslogan{
   display: flex;
